modified the add to cart funtionality
