# cmd/api/docs/swagger.json
@@ -528,15 +528,14 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "user_id",
-                        "name": "user_id",
-                        "in": "query",
-                        "required": true
+                        "description": "cart_id",
+                        "name": "cart_id",
+                        "in": "query"
                     },
                     {
                         "type": "integer",
-                        "description": "product_id",
-                        "name": "product_id",
+                        "description": "user_id",
+                        "name": "user_id",
                         "in": "query",
                         "required": true
                     },
@@ -546,7 +545,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Cart"
+                            "$ref": "#/definitions/models.CartItems"
                         }
                     }
                 ],
@@ -1344,14 +1343,20 @@
                 }
             }
         },
-        "models.Cart": {
+        "models.CartItems": {
             "type": "object",
             "properties": {
-                "quantity": {
-                    "type": "number"
+                "amount": {
+                    "type": "string"
                 },
-                "total_price": {
-                    "type": "number"
+                "cart_id": {
+                    "type": "integer"
+                },
+                "product_id": {
+                    "type": "integer"
+                },
+                "quantity": {
+                    "type": "string"
                 }
             }
         },
