# pkg/api/handler/cart.go
@@ -6,8 +6,8 @@ import (
 	"strconv"
 
 	"github.com/gin-gonic/gin"
-	"github.com/karthikkalarikal/ecommerce-project/pkg/domain"
 	"github.com/karthikkalarikal/ecommerce-project/pkg/usecase/interfaces"
+	"github.com/karthikkalarikal/ecommerce-project/pkg/utils/models"
 	"github.com/karthikkalarikal/ecommerce-project/pkg/utils/response"
 )
 
@@ -26,15 +26,15 @@ func NewCartHandler(usecase interfaces.CartUseCase) *CartHandler {
 // @Tags Cart Mangement
 // @Accept json
 // @Produce json
+// @Param cart_id query int false "cart_id"
 // @Param user_id query int true "user_id"
-// @Param product_id query int true "product_id"
-// @Param product body models.Cart true "Cart details"
+// @Param product body models.CartItems true "Cart details"
 // @Security BearerTokenAuth
 // @Success 200 {object} response.Response "success"
 // @Failure 500 {object} response.Response{} "fail"
 // @Router /users/carts/addtocart [post]
 func (handler *CartHandler) AddToCart(ctx *gin.Context) {
-	var cart domain.Cart
+	var cart models.CartItems
 	userId := ctx.Query("user_id")
 	userIdInt, err := strconv.Atoi(userId)
 	if err != nil {
@@ -43,12 +43,13 @@ func (handler *CartHandler) AddToCart(ctx *gin.Context) {
 		return
 	}
 
-	productId := ctx.Query("product_id")
-	productIdInt, err := strconv.Atoi(productId)
-	if err != nil {
-		errRes := response.ClientResponse(http.StatusBadRequest, "error in user id", nil, err.Error())
-		ctx.JSON(http.StatusBadRequest, errRes)
-		return
+	cartId := ctx.Query("cart_id")
+	cartIdInt := 0
+	if cartId != "" {
+		cartIdInt, err = strconv.Atoi(cartId)
+		if err != nil {
+			cartIdInt = 0
+		}
 	}
 
 	if err := ctx.BindJSON(&cart); err != nil {
@@ -57,7 +58,7 @@ func (handler *CartHandler) AddToCart(ctx *gin.Context) {
 		return
 	}
 
-	resCart, err := handler.cartUsecase.AddToCart(cart, userIdInt, productIdInt)
+	resCart, err := handler.cartUsecase.AddToCart(cart, userIdInt, cartIdInt)
 	if err != nil {
 		errRes := response.ClientResponse(http.StatusBadRequest, "fields are in wrong format", nil, err.Error())
 		ctx.JSON(http.StatusBadRequest, errRes)
