# pkg/api/handler/order.go
@@ -61,3 +61,26 @@ func (handler *OrderHandler) AddToOrder(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, successRes)
 
 }
+
+// ---------------------------------------- change status of order -------------------------------------- \\
+
+// @Summary Add To Order
+// @Description Add cart to the order using user id and cart id
+// @Tags Order Mangement
+// @Accept json
+// @Produce json
+// @Param user_id query int true "user_id"
+// @Security BearerTokenAuth
+// @Success 200 {object} response.Response "success"
+// @Failure 500 {object} response.Response{} "fail"
+// @Router /users/order/cancel [delete]
+// func (handler *OrderHandler) CancelOrder(ctx *gin.Context) {
+// 	user_id := ctx.Query("user_id")
+// 	userID, err := strconv.Atoi(user_id)
+// 	if err != nil {
+// 		errRes := response.ClientResponse(http.StatusBadGateway, "error in reading the user id", nil, err.Error())
+// 		ctx.JSON(http.StatusBadRequest, errRes)
+// 		return
+// 	}
+
+// }
