# pkg/utils/models/carts.go
@@ -1,13 +1,15 @@
 package models
 
 type Cart struct {
+	CartId     int     `json:"cart_id"`
+	UserId     int     `json:"user_id"`
 	Quantity   float64 `json:"quantity"`
 	TotalPrice float64 `json:"total_price"`
 }
 
 type CartItems struct {
-	ProductId   int    `json:"product_id"`
-	ProductName string `json:"product_name"`
-	Quantity    string `json:"quantity"`
-	Price       string `json:"price"`
+	CartId    int    `json:"cart_id"`
+	ProductId int    `json:"product_id"`
+	Quantity  string `json:"quantity"`
+	Amount    string `json:"amount"`
 }
